--- a/pom.xml
+++ b/pom.xml
@@ -1229,16 +1229,6 @@
           <artifactId>hadoop-client-runtime</artifactId>
           <version>${hadoop.version}</version>
         </dependency>
-        <dependency>
-          <groupId>org.apache.hadoop</groupId>
-          <artifactId>hadoop-aws</artifactId>
-          <version>${hadoop.version}</version>
-        </dependency>
-        <dependency>
-          <groupId>com.amazonaws</groupId>
-          <artifactId>aws-java-sdk-bundle</artifactId>
-          <version>${aws.version}</version>
-        </dependency>
       </dependencies>
     </profile>
     <profile>
@@ -1292,6 +1282,16 @@
             </exclusion>
           </exclusions>
         </dependency>
+      </dependencies>
+    </profile>
+    <profile>
+      <id>hadoop-aws</id>
+      <activation>
+        <property>
+          <name>hadoop-aws</name>
+        </property>
+      </activation>
+      <dependencies>
         <dependency>
           <groupId>org.apache.hadoop</groupId>
           <artifactId>hadoop-aws</artifactId>
