--- a/master/pom.xml
+++ b/master/pom.xml
@@ -162,7 +162,7 @@
       <id>hadoop-aws</id>
       <activation>
         <property>
-          <name>hadoop-aws</name>
+          <name>hadoop-aws-deps</name>
         </property>
       </activation>
       <dependencies>
