Initial commit of Apache Flink 1.16 support

--- a/pom.xml
+++ b/pom.xml
@@ -1593,6 +1593,26 @@
     </profile>
 
     <profile>
+      <id>flink-1.16</id>
+      <modules>
+        <module>client-flink/common</module>
+        <module>client-flink/flink-1.16</module>
+        <module>client-flink/flink-1.16-shaded</module>
+        <module>tests/flink-it</module>
+      </modules>
+      <properties>
+        <flink.version>1.16.3</flink.version>
+        <flink.binary.version>1.16</flink.binary.version>
+        <scala.binary.version>2.12</scala.binary.version>
+        <celeborn.flink.plugin.artifact>celeborn-client-flink-1.16_${scala.binary.version}</celeborn.flink.plugin.artifact>
+        <flink.streamig.artifact>flink-streaming-java</flink.streamig.artifact>
+        <flink.clients.artifact>flink-clients</flink.clients.artifact>
+        <flink.scala.artifact>flink-scala_${scala.binary.version}</flink.scala.artifact>
+        <flink.runtime.web.artifact>flink-runtime-web</flink.runtime.web.artifact>
+      </properties>
+    </profile>
+
+    <profile>
       <id>flink-1.17</id>
       <modules>
         <module>client-flink/common</module>
