Additional changes to build and github workflows

--- a/.github/workflows/deps.yml
+++ b/.github/workflows/deps.yml
@@ -50,6 +50,7 @@ jobs:
           - 'spark-3.5'
           - 'flink-1.14'
           - 'flink-1.15'
+          - 'flink-1.16'
           - 'flink-1.17'
           - 'flink-1.18'
           - 'flink-1.19'
@@ -82,6 +83,7 @@ jobs:
           - 'spark-3.5'
           - 'flink-1.14'
           - 'flink-1.15'
+          - 'flink-1.16'
           - 'flink-1.17'
           - 'flink-1.18'
           - 'flink-1.19'
