--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -45,6 +45,7 @@ jobs:
       - run: |
           build/mvn org.apache.rat:apache-rat-plugin:check -Pgoogle-mirror,flink-1.14
           build/mvn org.apache.rat:apache-rat-plugin:check -Pgoogle-mirror,flink-1.15
+          build/mvn org.apache.rat:apache-rat-plugin:check -Pgoogle-mirror,flink-1.16
           build/mvn org.apache.rat:apache-rat-plugin:check -Pgoogle-mirror,flink-1.17
           build/mvn org.apache.rat:apache-rat-plugin:check -Pgoogle-mirror,flink-1.18
           build/mvn org.apache.rat:apache-rat-plugin:check -Pgoogle-mirror,flink-1.19
