--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -49,6 +49,7 @@ jobs:
       - run: |
           build/mvn spotless:check -Pgoogle-mirror,flink-1.14
           build/mvn spotless:check -Pgoogle-mirror,flink-1.15
+          build/mvn spotless:check -Pgoogle-mirror,flink-1.16
           build/mvn spotless:check -Pgoogle-mirror,flink-1.17
           build/mvn spotless:check -Pgoogle-mirror,flink-1.18
           build/mvn spotless:check -Pgoogle-mirror,flink-1.19
