Address review comments

--- a/pom.xml
+++ b/pom.xml
@@ -1565,7 +1565,7 @@
         <flink.version>1.14.6</flink.version>
         <scala.binary.version>2.12</scala.binary.version>
         <celeborn.flink.plugin.artifact>celeborn-client-flink-1.14_${scala.binary.version}</celeborn.flink.plugin.artifact>
-        <flink.streamig.artifact>flink-streaming-java_${scala.binary.version}</flink.streamig.artifact>
+        <flink.streaming.artifact>flink-streaming-java_${scala.binary.version}</flink.streaming.artifact>
         <flink.clients.artifact>flink-clients_${scala.binary.version}</flink.clients.artifact>
         <flink.scala.artifact>flink-scala_${scala.binary.version}</flink.scala.artifact>
         <flink.runtime.web.artifact>flink-runtime-web_${scala.binary.version}</flink.runtime.web.artifact>
@@ -1585,7 +1585,7 @@
         <flink.binary.version>1.15</flink.binary.version>
         <scala.binary.version>2.12</scala.binary.version>
         <celeborn.flink.plugin.artifact>celeborn-client-flink-1.15_${scala.binary.version}</celeborn.flink.plugin.artifact>
-        <flink.streamig.artifact>flink-streaming-java</flink.streamig.artifact>
+        <flink.streaming.artifact>flink-streaming-java</flink.streaming.artifact>
         <flink.clients.artifact>flink-clients</flink.clients.artifact>
         <flink.scala.artifact>flink-scala_${scala.binary.version}</flink.scala.artifact>
         <flink.runtime.web.artifact>flink-runtime-web</flink.runtime.web.artifact>
@@ -1605,7 +1605,7 @@
         <flink.binary.version>1.16</flink.binary.version>
         <scala.binary.version>2.12</scala.binary.version>
         <celeborn.flink.plugin.artifact>celeborn-client-flink-1.16_${scala.binary.version}</celeborn.flink.plugin.artifact>
-        <flink.streamig.artifact>flink-streaming-java</flink.streamig.artifact>
+        <flink.streaming.artifact>flink-streaming-java</flink.streaming.artifact>
         <flink.clients.artifact>flink-clients</flink.clients.artifact>
         <flink.scala.artifact>flink-scala_${scala.binary.version}</flink.scala.artifact>
         <flink.runtime.web.artifact>flink-runtime-web</flink.runtime.web.artifact>
@@ -1625,7 +1625,7 @@
         <flink.binary.version>1.17</flink.binary.version>
         <scala.binary.version>2.12</scala.binary.version>
         <celeborn.flink.plugin.artifact>celeborn-client-flink-1.17_${scala.binary.version}</celeborn.flink.plugin.artifact>
-        <flink.streamig.artifact>flink-streaming-java</flink.streamig.artifact>
+        <flink.streaming.artifact>flink-streaming-java</flink.streaming.artifact>
         <flink.clients.artifact>flink-clients</flink.clients.artifact>
         <flink.scala.artifact>flink-scala_${scala.binary.version}</flink.scala.artifact>
         <flink.runtime.web.artifact>flink-runtime-web</flink.runtime.web.artifact>
@@ -1645,7 +1645,7 @@
         <flink.binary.version>1.18</flink.binary.version>
         <scala.binary.version>2.12</scala.binary.version>
         <celeborn.flink.plugin.artifact>celeborn-client-flink-1.18_${scala.binary.version}</celeborn.flink.plugin.artifact>
-        <flink.streamig.artifact>flink-streaming-java</flink.streamig.artifact>
+        <flink.streaming.artifact>flink-streaming-java</flink.streaming.artifact>
         <flink.clients.artifact>flink-clients</flink.clients.artifact>
         <flink.scala.artifact>flink-scala_${scala.binary.version}</flink.scala.artifact>
         <flink.runtime.web.artifact>flink-runtime-web</flink.runtime.web.artifact>
@@ -1665,7 +1665,7 @@
         <flink.binary.version>1.19</flink.binary.version>
         <scala.binary.version>2.12</scala.binary.version>
         <celeborn.flink.plugin.artifact>celeborn-client-flink-1.19_${scala.binary.version}</celeborn.flink.plugin.artifact>
-        <flink.streamig.artifact>flink-streaming-java</flink.streamig.artifact>
+        <flink.streaming.artifact>flink-streaming-java</flink.streaming.artifact>
         <flink.clients.artifact>flink-clients</flink.clients.artifact>
         <flink.scala.artifact>flink-scala_${scala.binary.version}</flink.scala.artifact>
         <flink.runtime.web.artifact>flink-runtime-web</flink.runtime.web.artifact>
