--- a/client-spark/common/pom.xml
+++ b/client-spark/common/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.apache.celeborn</groupId>
     <artifactId>celeborn-parent_${scala.binary.version}</artifactId>
-    <version>${project.version}</version>
+    <version>0.4.2</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
 
@@ -32,12 +32,12 @@
     <dependency>
       <groupId>org.apache.celeborn</groupId>
       <artifactId>celeborn-common_${scala.binary.version}</artifactId>
-      <version>${project.version}</version>
+      <version>0.4.2</version>
     </dependency>
     <dependency>
       <groupId>org.apache.celeborn</groupId>
       <artifactId>celeborn-client_${scala.binary.version}</artifactId>
-      <version>${project.version}</version>
+      <version>0.4.2</version>
     </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
@@ -54,7 +54,7 @@
     <dependency>
       <groupId>org.apache.celeborn</groupId>
       <artifactId>celeborn-client_${scala.binary.version}</artifactId>
-      <version>${project.version}</version>
+      <version>0.4.2</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
