--- a/service/pom.xml
+++ b/service/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.apache.celeborn</groupId>
     <artifactId>celeborn-parent_${scala.binary.version}</artifactId>
-    <version>${project.version}</version>
+    <version>0.4.2</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
@@ -33,7 +33,7 @@
     <dependency>
       <groupId>org.apache.celeborn</groupId>
       <artifactId>celeborn-common_${scala.binary.version}</artifactId>
-      <version>${project.version}</version>
+      <version>0.4.2</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
