--- a/.github/workflows/deps.yml
+++ b/.github/workflows/deps.yml
@@ -54,6 +54,7 @@ jobs:
           - 'flink-1.17'
           - 'flink-1.18'
           - 'flink-1.19'
+          - 'flink-1.20'
           - 'mr'
     steps:
     - uses: actions/checkout@v2
@@ -87,6 +88,7 @@ jobs:
           - 'flink-1.17'
           - 'flink-1.18'
           - 'flink-1.19'
+          - 'flink-1.20'
           - 'mr'
     steps:
     - uses: actions/checkout@v2
