--- a/pom.xml
+++ b/pom.xml
@@ -1736,6 +1736,26 @@
     </profile>
 
     <profile>
+      <id>flink-1.20</id>
+      <modules>
+        <module>client-flink/common</module>
+        <module>client-flink/flink-1.20</module>
+        <module>client-flink/flink-1.20-shaded</module>
+        <module>tests/flink-it</module>
+      </modules>
+      <properties>
+        <flink.version>1.20.0</flink.version>
+        <flink.binary.version>1.20</flink.binary.version>
+        <scala.binary.version>2.12</scala.binary.version>
+        <celeborn.flink.plugin.artifact>celeborn-client-flink-1.20_${scala.binary.version}</celeborn.flink.plugin.artifact>
+        <flink.streaming.artifact>flink-streaming-java</flink.streaming.artifact>
+        <flink.clients.artifact>flink-clients</flink.clients.artifact>
+        <flink.scala.artifact>flink-scala_${scala.binary.version}</flink.scala.artifact>
+        <flink.runtime.web.artifact>flink-runtime-web</flink.runtime.web.artifact>
+      </properties>
+    </profile>
+
+    <profile>
       <id>mr</id>
       <modules>
         <module>client-mr/mr</module>
