Revert "[RELEASE] Bump v0.4.3-SNAPSHOT"
This reverts commit d6d7d6963930b36348e038e2d16cb2f51813c308.

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.apache.celeborn</groupId>
     <artifactId>celeborn-parent_${scala.binary.version}</artifactId>
-    <version>0.4.3-SNAPSHOT</version>
+    <version>0.4.2</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
