--- a/client-flink/flink-1.18/pom.xml
+++ b/client-flink/flink-1.18/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.apache.celeborn</groupId>
     <artifactId>celeborn-parent_${scala.binary.version}</artifactId>
-    <version>0.4.3-SNAPSHOT</version>
+    <version>0.4.2</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
 
@@ -32,17 +32,17 @@
     <dependency>
       <groupId>org.apache.celeborn</groupId>
       <artifactId>celeborn-common_${scala.binary.version}</artifactId>
-      <version>0.4.3-SNAPSHOT</version>
+      <version>0.4.2</version>
     </dependency>
     <dependency>
       <groupId>org.apache.celeborn</groupId>
       <artifactId>celeborn-client_${scala.binary.version}</artifactId>
-      <version>0.4.3-SNAPSHOT</version>
+      <version>0.4.2</version>
     </dependency>
     <dependency>
       <groupId>org.apache.celeborn</groupId>
       <artifactId>celeborn-client-flink-common_${scala.binary.version}</artifactId>
-      <version>0.4.3-SNAPSHOT</version>
+      <version>0.4.2</version>
     </dependency>
     <dependency>
       <groupId>org.apache.flink</groupId>
