--- a/tests/mr-it/pom.xml
+++ b/tests/mr-it/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.apache.celeborn</groupId>
     <artifactId>celeborn-parent_${scala.binary.version}</artifactId>
-    <version>0.4.3-SNAPSHOT</version>
+    <version>0.4.2</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
 
@@ -32,40 +32,40 @@
     <dependency>
       <groupId>org.apache.celeborn</groupId>
       <artifactId>celeborn-common_${scala.binary.version}</artifactId>
-      <version>0.4.3-SNAPSHOT</version>
+      <version>0.4.2</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.celeborn</groupId>
       <artifactId>celeborn-client_${scala.binary.version}</artifactId>
-      <version>0.4.3-SNAPSHOT</version>
+      <version>0.4.2</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.celeborn</groupId>
       <artifactId>celeborn-master_${scala.binary.version}</artifactId>
-      <version>0.4.3-SNAPSHOT</version>
+      <version>0.4.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.celeborn</groupId>
       <artifactId>celeborn-worker_${scala.binary.version}</artifactId>
-      <version>0.4.3-SNAPSHOT</version>
+      <version>0.4.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.celeborn</groupId>
       <artifactId>celeborn-worker_${scala.binary.version}</artifactId>
-      <version>0.4.3-SNAPSHOT</version>
+      <version>0.4.2</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.celeborn</groupId>
       <artifactId>celeborn-client-mr-shaded_${scala.binary.version}</artifactId>
-      <version>0.4.3-SNAPSHOT</version>
+      <version>0.4.2</version>
       <scope>test</scope>
       <exclusions>
         <exclusion>
