--- a/worker/pom.xml
+++ b/worker/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.apache.celeborn</groupId>
     <artifactId>celeborn-parent_${scala.binary.version}</artifactId>
-    <version>0.4.3-SNAPSHOT</version>
+    <version>0.4.2</version>
   </parent>
 
   <artifactId>celeborn-worker_${scala.binary.version}</artifactId>
@@ -31,7 +31,7 @@
     <dependency>
       <groupId>org.apache.celeborn</groupId>
       <artifactId>celeborn-common_${scala.binary.version}</artifactId>
-      <version>0.4.3-SNAPSHOT</version>
+      <version>0.4.2</version>
       <exclusions>
         <exclusion>
           <groupId>org.apache.ratis</groupId>
@@ -46,7 +46,7 @@
     <dependency>
       <groupId>org.apache.celeborn</groupId>
       <artifactId>celeborn-service_${scala.binary.version}</artifactId>
-      <version>0.4.3-SNAPSHOT</version>
+      <version>0.4.2</version>
     </dependency>
     <dependency>
       <groupId>${leveldbjni.group}</groupId>
@@ -84,20 +84,20 @@
     <dependency>
       <groupId>org.apache.celeborn</groupId>
       <artifactId>celeborn-common_${scala.binary.version}</artifactId>
-      <version>0.4.3-SNAPSHOT</version>
+      <version>0.4.2</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.celeborn</groupId>
       <artifactId>celeborn-client_${scala.binary.version}</artifactId>
-      <version>0.4.3-SNAPSHOT</version>
+      <version>0.4.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.celeborn</groupId>
       <artifactId>celeborn-master_${scala.binary.version}</artifactId>
-      <version>0.4.3-SNAPSHOT</version>
+      <version>0.4.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
