Revert "[RELEASE] Bump v0.4.2"
This reverts commit 2181dd7d17711d529aa618e25a1f558652e480c7.

--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
   <groupId>org.apache.celeborn</groupId>
   <artifactId>celeborn-parent_${scala.binary.version}</artifactId>
-  <version>0.4.2</version>
+  <version>${project.version}</version>
   <packaging>pom</packaging>
 
   <name>Celeborn Project Parent POM</name>
