--- a/client-spark/spark-2-shaded/pom.xml
+++ b/client-spark/spark-2-shaded/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.apache.celeborn</groupId>
     <artifactId>celeborn-parent_${scala.binary.version}</artifactId>
-    <version>0.4.2</version>
+    <version>${project.version}</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
 
@@ -32,7 +32,7 @@
     <dependency>
       <groupId>org.apache.celeborn</groupId>
       <artifactId>celeborn-client-spark-2_${scala.binary.version}</artifactId>
-      <version>0.4.2</version>
+      <version>${project.version}</version>
     </dependency>
   </dependencies>
 
