--- a/master/pom.xml
+++ b/master/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.apache.celeborn</groupId>
     <artifactId>celeborn-parent_${scala.binary.version}</artifactId>
-    <version>0.4.2</version>
+    <version>${project.version}</version>
   </parent>
 
   <artifactId>celeborn-master_${scala.binary.version}</artifactId>
@@ -31,12 +31,12 @@
     <dependency>
       <groupId>org.apache.celeborn</groupId>
       <artifactId>celeborn-common_${scala.binary.version}</artifactId>
-      <version>0.4.2</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.celeborn</groupId>
       <artifactId>celeborn-service_${scala.binary.version}</artifactId>
-      <version>0.4.2</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>io.netty</groupId>
